Cau2, them item vao store file itemSlide, gop folder cau1 thanh SourceCode

--- a/SourceCode/app.json
+++ b/SourceCode/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "cau1",
-    "slug": "snack-bd055e4d-ab1c-412b-a52c-2354b89db45d",
+    "name": "sourcecode",
+    "slug": "snack-cb76a6f0-494d-4e63-8920-9958d78be409",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
