--- a/SourceCode/package.json
+++ b/SourceCode/package.json
@@ -11,14 +11,18 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@reduxjs/toolkit": "^1.9.0",
-    "react-redux": "^8.0.0",
     "redux": "^4.2.1",
+    "react-redux": "^8.0.0",
     "@types/react": "18.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/react-dom": "18.0.0",
+    "@expo/vector-icons": "^14.0.3",
     "react-native-paper": "*",
-    "react-native-safe-area-context": "4.10.5",
-    "@expo/vector-icons": "^14.0.3"
+    "react-native-screens": "3.31.1",
+    "@react-navigation/stack": "*",
+    "@react-navigation/native": "*",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
